<resources>
    <string name="app_name">Sample Social Media App</string>
    <string name="welcome">Welcome</string>
    <string name="signout">SignOut</string>
    <string name="facebook_app_id">532116677225095</string>
    <string name="fb_login_protocol_scheme">fb532116677225095</string>
    <string name="manual_sign_in">Manual Sign In</string>
    <string name="sign_in_with_fb">Sign In with Facebook</string>
    <string name="sign_in_with_twitter">Sign In with twitter</string>
    <string name="check_your_internet_connection_try_again">Check your internet connection and try again</string>
    <string name="something_went_wrong_try_again">Something went wrong, Try again</string>
    <string name="comments">Comments</string>
    <string name="post">Post</string>
    <string name="new_post">New Post</string>
    <string name="enter_post_title">Enter Post Title</string>
    <string name="cancel">Cancel</string>
    <string name="select_photo">Select Photo</string>
    <string name="processing_please_wait">Processing, Please wait..</string>
    <string name="this_field_is_mednetory">This field is madnetory</string>
    <string name="enter_post_comment">Enter your comment</string>
    <string name="put_your_comment_here">Put your comment here</string>
    <string name="user_name">user name</string>
    <string name="test_email">email@email.com</string>
    <string name="posts">Posts</string>
    <string name="shared_by">Shared by</string>
    <string name="commented_onyour_post">commented on your post</string>
    <string name="new_comment">New comment</string>
    <string name="post_shared">New share</string>
    <string name="shared_your_post">shared your post</string>
    <string name="post_liked">Post liked</string>
    <string name="liked_your_post">liked your post</string>
    <string name="please_select_photo">Please select photo</string>

</resources>
