<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/add_post_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/RtlOverlay.DialogWindowTitle.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/new_post"

                    android:textColor="@color/colorAccent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="4dp"
                    android:background="@color/colorAccent" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:backgroundTint="@color/colorAccent"
                    android:foregroundTint="@color/colorAccent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edittext_post_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/enter_post_title"
                        android:imeOptions="actionDone"
                        android:theme="@style/EditTextTheme" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/photo_imageview_dialogue_addpost"
                    android:layout_width="match_parent"

                    android:layout_height="350dp"

                    android:layout_margin="4dp"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:weightSum="10">


                    <ProgressBar
                        android:id="@+id/progrebar_upload_photo"
                        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:indeterminate="true"
                        android:indeterminateTint="@color/colorPrimaryDark"
                        android:indeterminateTintMode="src_atop"
                        android:max="100"
                        android:min="0"
                        android:progress="1"

                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_perc_progress_photo_upload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/processing_please_wait"
                        android:textColor="@color/black"
                        android:visibility="gone" />


                </LinearLayout>


                <TextView
                    android:id="@+id/attachment_new_post"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:drawableLeft="@drawable/ic_attachment_blue_400_24dp"
                    android:drawablePadding="4dp"
                    android:gravity="center|left"
                    android:text="@string/select_photo"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <Button
                        android:id="@+id/cancel_button_dialogue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:background="@drawable/accent_outline_square"
                        android:gravity="center"
                        android:text="@string/cancel"
                        android:textColor="@color/black"
                        tools:ignore="RtlHardcoded" />

                    <Button
                        android:id="@+id/post_button_dialogue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:background="@drawable/accent_outline_square"
                        android:gravity="center"
                        android:text="@string/post"
                        android:textColor="@color/black"
                        tools:ignore="RtlHardcoded" />

                </LinearLayout>

            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>

    </android.support.v7.widget.CardView>
</android.support.v7.widget.CardView>