<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp">

    <android.support.v7.widget.CardView
        android:id="@+id/add_post_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/RtlOverlay.DialogWindowTitle.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/comments"

                    android:textColor="@color/colorAccent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="4dp"

                    android:background="@color/colorAccent" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/comments_recycler_post_dial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"></android.support.v7.widget.RecyclerView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/accent_outline_square"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_weight="8.5"
                        android:backgroundTint="@color/colorAccent"
                        android:foregroundTint="@color/colorAccent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edittext_post_comment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:hint="@string/enter_post_comment"
                            android:imeOptions="actionDone"
                            android:theme="@style/EditTextTheme" />

                    </android.support.design.widget.TextInputLayout>

                    <ImageButton
                        android:id="@+id/send_comment_dial"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:background="@drawable/accent_outline_square"
                        android:src="@drawable/ic_send_blue_400_24dp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/cancel_button_dialogue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:background="@drawable/accent_outline_square"
                        android:gravity="center"
                        android:text="@string/cancel"
                        android:textColor="@color/black"
                        tools:ignore="RtlHardcoded" />


                </LinearLayout>

            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>

    </android.support.v7.widget.CardView>
</android.support.v7.widget.CardView>