<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="4dp"
    app:cardBackgroundColor="@color/colorSemiTransparentWhite"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_shared_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/accent_outline_square"
            android:orientation="vertical"
            android:padding="4dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/shared_by" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/shared_users_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/user_name_row_feed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:text="@string/app_name"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/post_date_row_feed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="right"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/post_details_textview_row_feed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:textColor="@color/colorAccent" />

            <ImageView
                android:id="@+id/post_photo_imageview_row_feed"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:background="@android:color/transparent" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/like_button_row_feed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="4dp"

                android:background="@drawable/accent_outline_square"

                android:src="@drawable/ic_thumb_up_blue_a200_24dp"
                android:textColor="@color/colorAccent"

                />

            <TextView
                android:id="@+id/likes_count_row_feed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/accent_outline_square"
                android:text="0"
                android:textColor="@color/colorAccent" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/comment_button_row_feed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginLeft="8dp"
                android:background="@drawable/accent_outline_square"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/comments"
                android:textColor="@color/colorAccent"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/comments_count_row_feed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/accent_outline_square"
                android:text="0"
                android:textColor="@color/colorAccent" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/forward_post_row_feed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/accent_outline_square"
                android:src="@drawable/ic_if_icon_forward_211666"
                android:textColor="@color/colorAccent" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/share_post_row_feed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/accent_outline_square"
                android:src="@drawable/ic_share_blue_400_36dp"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>